# pyxfce

./: AUTHORS  COPYING  ChangeLog  Contributors  FIXTHAT  Makefile.am  Makefile.in  README  TODO  TODO_INFO  TODO_WARNINGS  __init__.py  aclocal.m4  autogen.sh  autogen.sh.OLD  config.h.in  configure  configure.ac  pyxfce-1.0.pc.in  update-warnings
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: Makefile.am  configure.ac
examples/panel/: Makefile.am
examples/panel/testplugin1/: Makefile.am  testplugin.desktop  testplugin.py
examples/spawn/: testspawn.py
examples/systemtray/: Makefile.am  testtrayarea.py
gui/: CHECKRUNNING_MAYBE  Makefile.am  Makefile.in  ODEF  Q  QQ  TODO  _gui_la-gdk-extensions.loT  _gui_la-preview_filesel.loT  aboutdialog.c  aboutdialog.defs  aboutdialog.override  appmenuitem.c  appmenuitem.defs  appmenuitem.override  clock.c  clock.defs  clock.override  colorbutton.c  colorbutton.defs  colorbutton.override  decorbutton.c  decorbutton.defs  decorbutton.override  decortoggle.c  decortoggle.defs  decortoggle.override  dialogs.c  dialogs.defs  dialogs.override  exec.override  filechooser.c  filechooser.defs  filechooser.override  framebox.c  framebox.defs  framebox.override  gdk-extensions.defs  gdk_extensions.c  gdk_extensions.defs  (+51 more)
gui/tests/: testaboutdialog.py  testappmenuitem.py  testcolorbutton.py  testdecorbutton.py  testdecortoggle.py  testfilechooser.py  testframebox.py  testiconbutton.py  testicontheme.py  testmenubutton.py  testmovehandler.py  testscaledimage.py  testsessionclient.py  testsystemtray.py  testtogglebutton.py
m4/: depends.m4
mcs/: Makefile.am  Makefile.in  gen  gen-xfce_mcs-channel.c  gen-xfce_mcs-client.c  gen-xfce_mcs-manager.c  gobs  mcs.py  mcs_client.c  mcs_client.defs  mcs_client.override  mcs_common.c  mcs_common.defs  mcs_common.override  mcs_manager.c  mcs_manager.defs  mcs_manager.override  mcsmodule.c  template.override  xfce-mcs-channel-private.h  xfce-mcs-channel.c  xfce-mcs-channel.gob  xfce-mcs-channel.h  xfce-mcs-client-private.h  xfce-mcs-client.c  xfce-mcs-client.gob  xfce-mcs-client.h  xfce-mcs-manager-private.h  xfce-mcs-manager.c  xfce-mcs-manager.gob  xfce-mcs-manager.h  xfce_mcs-channel.defs  xfce_mcs-channel.override  xfce_mcs-client.defs  xfce_mcs-client.override  xfce_mcs-manager.defs  xfce_mcs-manager.override
mcs/tests/: test-xfce-mcs-client.c  testclientaddchannel.py  testclientshowdialog.py
menu/: Makefile.am  gen  libxfce4menu.defs  libxfce4menu_config.defs  libxfce4menu_config.override  libxfce4menu_enum_types.defs  menu.defs  menu.override  menu.py  menu_and_rules.override  menu_directory.override  menu_element.override  menu_environment.defs  menu_environment.override  menu_item.defs  menu_item.override  menu_item_cache.override  menu_item_pool.override  menu_layout.defs  menu_layout.override  menu_monitor.override  menu_move.override  menu_not_rules.defs  menu_not_rules.override  menu_or_rules.override  menu_rules.override  menu_separator.defs  menu_separator.override  menu_standard_rules.override  menumodule.c  xfce_menu-and-rules.defs  xfce_menu-directory.defs  xfce_menu-element.defs  xfce_menu-item-cache.defs  xfce_menu-item-pool.defs  xfce_menu-monitor.defs  xfce_menu-move.defs  xfce_menu-or-rules.defs  xfce_menu-rules.defs  xfce_menu-standard-rules.defs
netk/: Makefile.am  Makefile.in  application.c  application.defs  application.override  class_group.c  class_group.defs  class_group.override  enum-types.defs  enum_types.c  enum_types.defs  enum_types.override  gen  marshal.defs  netk.py  netkmodule.c  pager.c  pager.defs  pager.override  screen.c  screen.defs  screen.override  set_geometry.c  tasklist.c  tasklist.defs  tasklist.override  template.override  trayicon.c  trayicon.defs  trayicon.override  util.c  util.defs  util.override  window-action-menu.defs  window-menu.defs  window.c  window.defs  window.override  window_action_menu.c  window_action_menu.defs  (+7 more)
netk/tests/: getbackground.py  iwindowlist.py  netkwindowgettwice.py  testtrayicon.py
panel/: Makefile.am  Makefile.in  ODEF  TODO  arrow_button.c  arrow_button.defs  arrow_button.override  convenience.c  convenience.defs  convenience.override  enum_types.c  enum_types.defs  enum_types.override  enums.c  enums.defs  enums.override  external_plugin.c  external_plugin.defs  external_plugin.override  gen  hvbox.c  hvbox.defs  hvbox.override  icons-h  icons.c  icons.override  image.defs  itembar.c  itembar.defs  itembar.override  libxfce4panel.defs  libxfce4panel_config.defs  libxfce4panel_enum_types.defs  libxfce4panel_enums.defs  macros.defs  macros_46.defs  panel.py  panelmodule.c  plugin.c  plugin.defs  (+16 more)
panel.stable/: Makefile.am  icons.c  icons.defs  main.defs  panel.py  panelmodule.c  xfce_item.defs  xfce_itembar.defs
panel/O/: add-control-dialog.defs  controls.defs  global.defs  icons.defs  item.defs  item_dialog.defs  panel-command.defs  panel.defs  plugins.defs  support.defs  xfce.defs
panel/cpart/: Makefile.am  plugin.c
panel/oo/: support.override  template.override
patches/: xfce42-gui-enum-types.c  xterm-191-pid.patch  (+1 more)
ui/: Makefile.am  dialogs.defs  dialogs.override  gdk_extensions.defs  gdk_extensions.override  gen  gtk_extensions.defs  gtk_extensions.override  libxfce4ui.defs  libxfce4ui_config.defs  libxfce4ui_enum_types.defs  sm_client.defs  sm_client.override  spawn.defs  spawn.override  titled_dialog.override  ui.py  uimodule.c
util/: GET_FUNCTIONS  Makefile.am  Makefile.in  ODEF  desktopentry.c  desktopentry.defs  desktopentry.override  fileutils.c  fileutils.defs  fileutils.override  gen  i18n.c  i18n.defs  i18n.override  kiosk.c  kiosk.defs  kiosk.override  miscutils.c  miscutils.defs  miscutils.override  rc.c  rc.defs  rc.override  resource.c  resource.defs  resource.override  template.override  utf8.c  utf8.defs  utf8.override  util.py  utilmodule.c
xfconf/: Makefile.am  binding.c  binding.defs  binding.override  channel.c  channel.defs  channel.override  errors.c  errors.defs  gen  types.c  types.defs  xfconf.py  xfconfmodule.c
xfconf/tests/: testwmconf.py
(+1 files in other folders)
